[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/Textures/enemy_head.png" type="Texture" id=1]
[ext_resource path="res://Assets/Textures/fence_down.png" type="Texture" id=2]
[ext_resource path="res://Assets/fence.tres" type="Texture" id=3]
[ext_resource path="res://Assets/Textures/apple.png" type="Texture" id=4]
[ext_resource path="res://Assets/Textures/fence_corner.png" type="Texture" id=5]
[ext_resource path="res://Assets/Textures/enemy_box.png" type="Texture" id=6]
[ext_resource path="res://Assets/Textures/snake_box.png" type="Texture" id=7]
[ext_resource path="res://Assets/Textures/arena.png" type="Texture" id=8]
[ext_resource path="res://Assets/Textures/snake_head.png" type="Texture" id=9]
[ext_resource path="res://Scripts/MainSnake.gd" type="Script" id=10]

[sub_resource type="TileSet" id=1]
0/name = "fence.tres 0"
0/texture = ExtResource( 3 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 8, 8 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "fence_corner.png 1"
1/texture = ExtResource( 5 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 8, 8 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "fence_corner.png 2"
2/texture = ExtResource( 5 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 8, 0, 8, 8 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "fence_down.png 3"
3/texture = ExtResource( 2 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 0, 8, 16 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "fence_down.png 4"
4/texture = ExtResource( 2 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 8, 0, 8, 16 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0

[node name="Node2D" type="Node2D"]

[node name="SnakeBattle" type="CanvasLayer" parent="."]
script = ExtResource( 10 )
playerbodytex = ExtResource( 7 )
playerheadtex = ExtResource( 9 )
enemybodytex = ExtResource( 6 )
enemyheadtex = ExtResource( 1 )
foodtex = ExtResource( 4 )

[node name="StartCount" type="Label" parent="SnakeBattle"]
margin_left = 116.0
margin_top = 74.0
margin_right = 150.0
margin_bottom = 123.0
custom_colors/font_color = Color( 0, 0, 0, 1 )

[node name="GameOver" type="Button" parent="SnakeBattle"]
margin_left = 72.0
margin_top = 96.0
margin_right = 168.0
margin_bottom = 120.0
text = "GAME OVER"

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 240.0
margin_bottom = 160.0
texture = ExtResource( 8 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 1 )
cell_size = Vector2( 8, 8 )
format = 1
tile_data = PoolIntArray( 0, 1, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 16, 0, 0, 17, 0, 0, 18, 0, 0, 19, 0, 0, 20, 0, 0, 21, 0, 0, 22, 0, 0, 23, 0, 0, 24, 0, 0, 25, 0, 0, 26, 0, 0, 27, 0, 0, 28, 0, 0, 29, 2, 0, 65536, 3, 0, 65565, 4, 0, 131072, 3, 0, 131101, 4, 0, 196608, 3, 0, 196637, 4, 0, 262144, 3, 0, 262173, 4, 0, 327680, 3, 0, 327709, 4, 0, 393216, 3, 0, 393245, 4, 0, 458752, 3, 0, 458781, 4, 0, 524288, 3, 0, 524317, 4, 0, 589824, 3, 0, 589853, 4, 0, 655360, 3, 0, 655389, 4, 0, 720896, 3, 0, 720925, 4, 0, 786432, 3, 0, 786461, 4, 0, 851968, 3, 0, 851997, 4, 0, 917504, 3, 0, 917533, 4, 0, 983040, 3, 0, 983069, 4, 0, 1048576, 3, 0, 1048605, 4, 0, 1114112, 3, 0, 1114141, 4, 0 )

[node name="Debug" type="Node2D" parent="."]

[connection signal="pressed" from="SnakeBattle/GameOver" to="SnakeBattle" method="_on_GameOver_pressed"]
